added styling and event listener

--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
     <title>Weather App HW</title>
   </head>
   <body>
+    <nav class="navbar navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Weather Dashboard</a>
+    </nav>
+    Search for a city:
     <form>
       <input type="text" id="userInput" />
       <button id="submitBtn">Search</button>
     </form>
     <ul id="cities"></ul>
+    <div class="li"></div>
     <div class="card">
       <div id="main" class="card-body"></div>
     </div>
