--- a/index.html
+++ b/index.html
@@ -20,15 +20,20 @@
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Weather Dashboard</a>
+      <Weather class="navbar-brand">Weather Dashboard <div id="day"></div></a>  
+   
     </nav>
-    Search for a city:
+    <br>
+<h5>Search for a city:</h5>
     <form>
       <input type="text" id="userInput" />
       <button id="submitBtn">Search</button>
     </form>
-    <ul id="cities"></ul>
-    <div class="li"></div>
+  
+       
+      </div>
+    </div>
+
     <div class="card">
       <div id="main" class="card-body"></div>
     </div>
@@ -50,7 +55,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
