added more weather details to forecast

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       <Weather class="navbar-brand">Weather Dashboard <div id="day"></div></a>  
    
     </nav>
-    <br>
+   <br>
 <h5>Search for a city:</h5>
     <form>
       <input type="text" id="userInput" />
       <button id="submitBtn">Search</button>
     </form>
-  
-       
+  <br>
+    <ul id="cities"></ul>
       </div>
     </div>
 
